--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 		<div class="links">
 				<ul>
 					<li class="vk">
-						<a href="#">VK</a>					
+						<a href="https://vk.com/id86479467">VK</a>	
 					</li>
 					<li class="instagram">
-						<a href="#">Instagram</a>					
+						<a href="https://www.instagram.com/bardanovk/">Instagram</a>				
 					</li>
 					<li class="github">
-						<a href="#">GitHub</a>					
+						<a href="https://github.com/bardanovk">GitHub</a>					
 					</li>
 					<li class="telegram">
-						<a href="#">Telegram</a>					
+						<a href="https://t.me/bardanovk">Telegram</a>					
 					</li>
 					<li class="music">
-						<a href="#">Music</a>					
+						<a href="https://music.yandex.ru/users/bardanovkv">Music</a>					
 					</li>
 				</ul>
 		</div>
