--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BK</title>
+	<title>BK inc.</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<meta charset="utf-8" content="text">
 </head>
