--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<meta charset="utf-8" content="text">
 </head>
 <body>
+	<style type="text/css">
+		@font-face{
+			font-family: 'Niagara';
+			scr: url('../fonts/NIASOL.ttf') format('truetype');
+		}
+	</style>
 	<div class="parts">
 		<div class="logo">
 			<h1>BK</h1>
