--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 <head>
 	<title>BK inc.</title>
-	<link rel="stylesheet" type="text/css" href="styles/fonts.css">
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 	<meta charset="utf-8" content="text">
+	<style type="text/css">
+		@font-face {
+		    font-family: 'Niagara';
+		    src: url('../fonts/NiagaraSolid-Reg.eot');
+		    src: url('../fonts/NiagaraSolid-Reg.eot?#iefix') format('embedded-opentype'),
+		        url('../fonts/NiagaraSolid-Reg.woff2') format('woff2'),
+		        url('../fonts/NiagaraSolid-Reg.woff') format('woff'),
+		        url('../fonts/NiagaraSolid-Reg.svg#NiagaraSolid-Reg') format('svg');
+		    font-weight: normal;
+		    font-style: normal;
+		    font-display: swap;
+		}
+	</style>
 </head>
 <body>	
 	<div class="parts">
