--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
 		    font-style: normal;
 		    font-display: swap;
 			}
-		@keyframes show{
-			0% {opacity:0;}
-			100% {opacity:1;}
-		}
+
 		body{
 	    	opacity:0; /*Элемент полностью прозрачный (невидимый)*/
 			transition: 1s; /*Скорость перехода состояния элемента*/
 			animation: show 3s 1; /* Указываем название анимации, её время и количество повторов*/
 			animation-fill-mode: forwards; /* Чтобы элемент оставался в конечном состоянии анимации */
-			
-		}
+			animation-delay: 1s;
+		}		
 	</style>
 </head>
 <body>	
