--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			}
 
 		body{
+			overflow: hidden;
 	    	opacity:0; /*Элемент полностью прозрачный (невидимый)*/
 			transition: 1s; /*Скорость перехода состояния элемента*/
 			animation: show 3s 1; /* Указываем название анимации, её время и количество повторов*/
