--- a/index.html
+++ b/index.html
@@ -23,8 +23,61 @@
 			transition: 1s; /*Скорость перехода состояния элемента*/
 			animation: show 3s 1; /* Указываем название анимации, её время и количество повторов*/
 			animation-fill-mode: forwards; /* Чтобы элемент оставался в конечном состоянии анимации */
-			animation-delay: 1s;
-		}		
+			animation-delay: 1s;			
+			font-family: "Niagara";
+			display:flex;
+			width: 76%;
+			margin: 0 auto;
+			font-size: 10vh;
+		}
+		html{
+			background: url(../images/background2.png);
+			background-repeat: no-repeat;
+			background-position: right bottom;
+			background-size: 80vh;
+		}
+
+		.parts{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-basis: 50%;
+			height: 100vh;
+		}
+
+		h1{	
+			font-size: 5em;
+			margin-block-start: 0px;
+		    margin-block-end: 0;
+		}
+
+		a{
+			text-decoration: none;
+			color: black;
+			background-image: linear-gradient(currentColor, currentColor);
+		    background-position: 0% 100%;
+		    background-repeat: no-repeat;
+		    background-size: 0% .2vh;
+		    transition: background-size .3s;
+		    
+		}
+
+		a:hover {	
+		    background-size: 100% .5vh;
+		}
+
+		ul{
+			display: flex;
+			flex-flow: column;
+			justify-content: space-between;
+			align-items: flex-end;
+			height: 60vh;
+			list-style-type: none; 
+		}
+		@keyframes show{
+					0% {opacity:0;}
+					100% {opacity:1;}
+				}
 	</style>
 </head>
 <body>	
