--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			}
 
 		body{
-			overflow: hidden;
-	    	opacity:0; /*Элемент полностью прозрачный (невидимый)*/
-			transition: 1s; /*Скорость перехода состояния элемента*/
-			animation: show 3s 1; /* Указываем название анимации, её время и количество повторов*/
-			animation-fill-mode: forwards; /* Чтобы элемент оставался в конечном состоянии анимации */
-			animation-delay: 1s;			
+			/*overflow: hidden;
+	    	opacity:0; 
+			transition: 1s; 
+			animation: show 3s 1; 
+			animation-fill-mode: forwards; 
+			animation-delay: 1s;*/			
 			font-family: "Niagara";
 			display:flex;
 			width: 76%;
