--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 			}
 
 		body{
-			/*overflow: hidden;
+			overflow: hidden;
 	    	opacity:0; 
 			transition: 1s; 
-			animation: show 3s 1; 
+			animation: show 2s 1; 
 			animation-fill-mode: forwards; 
-			animation-delay: 1s;*/			
+			animation-delay: 1s;			
 			font-family: "Niagara";
 			display:flex;
 			width: 76%;
