--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 		body{
 			overflow: hidden;
 	    	opacity:0; 
-			transition: 0s; 
-			animation: show 2s 1; 
+			transition: 1s; 
+			animation: show .5s 1; 
 			animation-fill-mode: forwards; 
-			animation-delay: 1s;			
+			animation-delay: 1.5s;			
 			font-family: "Niagara";
 			display:flex;
 			width: 76%;
