--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 				display: flex;
 				flex-direction: column;
 			}
+			h1{
+				font-size: 17.5vh;
+			}
 		}
 		@media screen and (min-width: 720px)
 		{
