--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
 				flex-direction: column;				
 			}
 			h1{
-				font-size: 17.5vh;
-								 
+				font-size: 17.5vh;								 
+			}
+			ul{
+				margin-top: 5vh;
 			}
 			.parts{
 				height: auto;
