--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 				flex-direction: column;				
 			}
 			h1{
-				font-size: 17.5vh;								 
+				font-size: 17.5vh;
+				margin-block-start: 0px;
+		    	margin-block-end: 0;								 
 			}
 			ul{
 				margin-top: 0vh;
