--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
 			}
 			.parts{
 				height: auto;
+			}
+			.logo{
+				margin-top: 2.5vh;
 			}			
 		}
 		@media screen and (min-width: 700px)
