--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 			}
 		}
 		html{
+			height: 100vh;
 			background: url(../images/background2.png);
 			background-repeat: no-repeat;
 			background-position: right bottom;
