--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<>
     <title>BK inc.</title>
     <meta charset="utf-8" content="text">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta>
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+
     <style type="text/css">
         @font-face {
             font-family: 'Niagara';
@@ -110,55 +113,55 @@
             }
         }
     </style>
-</head>
+    </head>
 
-<body>
-    <div class="parts">
-        <div class="logo">
-            <h1>BK</h1>
+    <body>
+        <div class="parts">
+            <div class="logo">
+                <h1>BK</h1>
+            </div>
         </div>
-    </div>
-    <div class="parts">
-        <div class="links">
-            <ul>
-                <li class="vk">
-                    <a href="https://vk.com/id86479467">VK</a>
-                </li>
-                <li class="instagram">
-                    <a href="https://www.instagram.com/bardanovk/">Instagram</a>
-                </li>
-                <li class="github">
-                    <a href="https://github.com/bardanovk">GitHub</a>
-                </li>
-                <li class="telegram">
-                    <a href="https://t.me/bardanovk">Telegram</a>
-                </li>
-                <li class="music">
-                    <a href="https://music.yandex.ru/users/bardanovkv">Music</a>
-                </li>
-            </ul>
+        <div class="parts">
+            <div class="links">
+                <ul>
+                    <li class="vk">
+                        <a href="https://vk.com/id86479467">VK</a>
+                    </li>
+                    <li class="instagram">
+                        <a href="https://www.instagram.com/bardanovk/">Instagram</a>
+                    </li>
+                    <li class="github">
+                        <a href="https://github.com/bardanovk">GitHub</a>
+                    </li>
+                    <li class="telegram">
+                        <a href="https://t.me/bardanovk">Telegram</a>
+                    </li>
+                    <li class="music">
+                        <a href="https://music.yandex.ru/users/bardanovkv">Music</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function(m, e, t, r, i, k, a) {
-            m[i] = m[i] || function() {
-                (m[i].a = m[i].a || []).push(arguments)
-            };
-            m[i].l = 1 * new Date();
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+        <!-- Yandex.Metrika counter -->
+        <script type="text/javascript">
+            (function(m, e, t, r, i, k, a) {
+                m[i] = m[i] || function() {
+                    (m[i].a = m[i].a || []).push(arguments)
+                };
+                m[i].l = 1 * new Date();
+                k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+            })
+            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(65934445, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true,
-            webvisor: true
-        });
-    </script>
-    <noscript><div><img src="https://mc.yandex.ru/watch/65934445" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-    <!-- /Yandex.Metrika counter -->
-</body>
+            ym(65934445, "init", {
+                clickmap: true,
+                trackLinks: true,
+                accurateTrackBounce: true,
+                webvisor: true
+            });
+        </script>
+        <noscript><div><img src="https://mc.yandex.ru/watch/65934445" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <!-- /Yandex.Metrika counter -->
+    </body>
 
 </html>
